fixed layout issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 // my custom styles here
-.social {
-}
+
 .header {
   background: #151515 url("../images/intro-bg.jpg") no-repeat center
     center/cover;
